# bookmarks

./: pyproject.toml
bookmarks/account/: authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: dashboard.html  login.html
bookmarks/account/templates/registration/: login.html  password_re- set_confirm.html  password_reset_complete.html
bookmarks/bookmarks/: settings.py  urls.py
