[tool.poetry]
name = "bookmarks"
version = "0.1.0"
description = ""
authors = ["Mark Andrey <markandreym@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
